@@ -21,6 +21,10 @@ namespace :state_machine do
     task :rails => [:environment, 'state_machine:draw']
     
     desc 'Draws a set of state machines using GraphViz for a Merb application.  Target class with CLASS=x,y,z; Font name with FONT=x; Image format with FORMAT=x; Orientation with ORIENTATION=x'
-    task :merb => [:merb_env, 'state_machine:draw']
+    task :merb => [:merb_env] do
+      # Fix ruby-graphviz being incompatible with Merb's process title
+      $0 = 'rake'
+      Rake::Task['state_machine:draw'].invoke
+    end
   end
 end
